fix: Remove z-index and add background color for user-avatar-menu (#92)

--- a/clients/home/pages/app-table-view-detail/header/index.scss
+++ b/clients/home/pages/app-table-view-detail/header/index.scss
@@ -1,6 +1,5 @@
 .app-details-header {
   position: relative;
-  z-index: 10;
   box-shadow: 0px 8px 24px 4px rgba(148, 163, 184, 0.25);
 }
 
